[metadata]
name = python-pom2
version = 2.0.1
summary = POM microframework to develop web UI tests easy, quickly and with pleasure
description-file = readme.rst
license = Apache Software License
classifiers =
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.6
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
author = Sergei Chipiga
author-email = schipiga@gmail.com
home-page = http://pom.readthedocs.io/

[files]
packages =
    pom

[build_sphinx]
all_files = 1
source-dir = docs/source
